--- a/styles.css
+++ b/styles.css
@@ -385,3 +385,7 @@ body.dark-mode .top-right-buttons button {
 .newsletter a:hover {
   color: white;
 }
+.logo {
+    max-width: 100%;
+    height: auto;
+}
